# CCSC-CTF-2023

./: .gitignore  README.md
.github/workflows/: build.yml  ctfd.yml  pipeline.yml  readme.yml
crypto/Leonhard’s position model/: readme.md
crypto/ai-pizza/: README.md  challenge.yml  docker-compose.yml
crypto/caesar-salad/: README.md  challenge.yml
crypto/ciphered-protocol-assault/: README.md  challenge.yml
crypto/leonhards-position-model/: README.md  challenge.yml
crypto/little-shakalaka/: README.md  challenge.yml  docker-compose.yml
crypto/mind-your-a-and-i/: README.md  challenge.yml
crypto/rsai/: README.md  challenge.yml  docker-compose.yml
crypto/secure-timer/: README.md  challenge.yml  docker-compose.yml
forensics/AIitm/: README.md  challenge.yml
forensics/Unraveling_the_Frame/: challenge.yml
forensics/ai-retaliation/: README.md  challenge.yml
forensics/colors/: README.md  challenge.yml
forensics/is-beedof-real/: README.md  (+1 more)
web/zenon/setup/bot/: Dockerfile  app.py  config.py  pyproject.toml
web/zenon/setup/webapp/: .dockerignore  Dockerfile  pyproject.toml
web/zenon/setup/webapp/app/: auth.py  bot.py  config.py  crud.py  database.py  deps.py  initdb.py  main.py  model.py  schema.py  security.py  services.py
web/zenon/setup/webapp/app/solution/: writeup.md
web/zenon/setup/webapp/app/static/css/: main.css
web/zenon/setup/webapp/app/static/js/: mdb.js
web/zenon/setup/webapp/app/styles/: main.css
web/zenon/setup/webapp/app/templates/: base.html  contact.html  debug.html  home.html  login.html  question.html  register.html
(+314 files in other folders)
